2003-03-11  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_init): added code the recognize new MPIO
	  models (FD100/FL100/FY100), no idea how to handle them, yet!

2003-03-08  Markus Germeier  <mager@tzi.de>

	* mpio.spec.in, etc/Makefile.am: fixed packaging problems
	* libmpio/mpio.c (mpio_init): re-added memset, this time at the
	  correct location
	* mpiosh/callback.c (mpiosh_cmd_mem): removes warning messages
	  (this should hopefully work now ;-)
	  (mpiosh_cmd_dump): fixed core dump in "dump" command

2003-02-21    <crunchy@tzi.de>

	* libmpio/directory.h, libmpio/directory.c, libmpio/mpio.h,
	libmpio/mpio.c: add patch from Sebastian Kloska
	<kloska@scienion.de>. containing possibility to chage name of
	destination when copying files, moving files and reordering files
	in directory

2002-12-06    <crunchy@tzi.de>

	* kernel/mpio.c: 2.4.20 does not contain the typedef purb_t
	anymore. Replaced it with 'struct urb *'

2002-11-18  Andreas Buesching  <crunchy@tzi.de>

	* configure.in: add a check for readline header files

2002-11-14  Andreas Buesching  <crunchy@tzi.de>

	* tools/mpiologo.c: renamed logotool.c to mpiologo.c

	* mpio.spec.in (): another way to add the kernel module to
	the file list; add mpiologo to file list
	

2002-11-13  Markus Germeier  <mager@tzi.de>

	* mpiosh/callback.c (mpiosh_cmd_format): backup and restore
	  config files  (probably not complete yet!)
	* libmpio/defs.h (MPIO_CHARSET): 
	* libmpio/directory.c (mpio_dentry_put, mpio_dentry_get_real): 
	  use ISO-8859-15 instead of ASCII as default charset encoding
	  (much nicer now!)
	* libmpio/directory.c (mpio_charset_get, mpio_charset_set): 
	  added functions to allow changing of charset 
	* mpiosh/config.c: read charset from config file
	* libmpio/fat.c (mpio_fatentry_read): 
	  fixed problem with CONFIG.DAT that only the first block
	  was read. (what was I thinking there??)

2002-11-04  Andreas Buesching  <crunchy@tzi.de>
