@@ -14,6 +14,11 @@ AC_PROG_MAKE_SET
 AC_PROG_CC
 AM_PROG_LIBTOOL
 
+dnl Check for endianess
+
+AC_LANG_C
+AC_C_BIGENDIAN
+
 dnl Checks for header files.
 
 AC_CHECK_HEADER(getopt.h,HAVE_GETOPT_H=1,HAVE_GETOPT_H=0)
